# transnovel

./: .gitignore  AGENTS.md  README.en.md  README.ko-kr.md  README.ko.md  README.md  config.example.yaml  config.test.yaml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
.agents/skills/api-log-lookup/: SKILL.md
.agents/skills/llm-api-integration/: SKILL.md
.agents/skills/novel-parser-guide/: SKILL.md
.agents/skills/tauri-rust-patterns/: SKILL.md
.agents/skills/translation-pipeline/: SKILL.md
.context/: STEERING.md  TASKS.md
.github/workflows/: build.yml  build.yml.disabled  ci.yml  release.yml
docs/: DESIGN.md  index.html  quickstart.html  references.md
docs/css/: custom.css
docs/js/: main.js
docs/superpowers/plans/: 2026-03-18-transnovel-rename.md  2026-04-08-watchlist-implementation.md  2026-04-13-github-release-update-check.md  2026-04-15-config-yaml-override.md
docs/superpowers/specs/: 2026-03-18-transnovel-rename-design.md  2026-04-08-watchlist-design.md  2026-04-13-github-release-update-check-design.md  2026-04-15-config-yaml-override-design.md
scripts/: generate-release-notes.mjs  sync-release-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  lib.rs
src-tauri/src/commands/: api_logs.rs  character_dictionary.rs  export.rs  mod.rs  parser.rs  series.rs  settings.rs  translation.rs  watchlist.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_api_logs.sql  003_api_logs_provider.sql  004_novel_character_dictionary.sql  005_watchlist.sql  006_watchlist_site_scope.sql
src-tauri/src/models/: api_log.rs  mod.rs  novel.rs  translation.rs
src-tauri/src/parsers/: hameln.rs  kakuyomu.rs  mod.rs  nocturne.rs  syosetu.rs
src-tauri/src/services/: antigravity.rs  api_logger.rs  cache.rs  character_dictionary.rs  codex.rs  gemini.rs  llm_config.rs  mod.rs  novel_metadata.rs  openai_compatible.rs  openai_oauth.rs  openrouter.rs  paragraph.rs  substitution.rs  translator.rs  watchlist.rs
src/components/common/: Button.tsx  DebugPanel.tsx  Input.tsx  Modal.tsx  (+4 more)
src/hooks/: useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts  useTauriEvents.ts  useTranslation.test.ts  useTranslation.ts  useUILanguage.test.ts  useUILanguage.ts  useViewSettings.ts  useWatchlist.test.ts  useWatchlist.ts
src/i18n/: index.ts
src/stores/: apiLogStore.ts  appStore.ts  debugStore.test.ts  debugStore.ts  index.ts  seriesStore.test.ts  seriesStore.ts  translationStore.test.ts  translationStore.ts  uiStore.test.ts  uiStore.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: release.ts  tabShortcuts.ts  urlHistory.ts  watchlist.test.ts  watchlist.ts
(+58 files in other folders)
