[package]
name = "ai-novel-translator"
version = "0.1.0"
description = "AI-powered Japanese web novel translator"
authors = ["AI Novel Translator Team"]
license = "MIT"
repository = "https://github.com/user/ai-novel-translator"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTML parsing
scraper = "0.23"
regex = "1.11"

# Logging
log = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
open = "5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
